Backup Application to export prio removine and exporting